force-app/main/default/objects/FFC_Participation__c/FFC_Participation__c.object-meta.xml
<CustomObject>
    <description>Grant opportunity awarded to a member for specific project and period.</description>
    <label>Funds for Change Grant</label>
    <nameField>
        <label>FFC Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds for Change Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>