force-app/main/default/objects/FFC_Participation__c/fields/Actual_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Outcomes__c</fullName>
    <label>Actual Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>