force-app/main/default/objects/FFC_Participation__c/fields/Additional_Grant_Text__c.field-meta.xml
<CustomField>
    <fullName>Additional_Grant_Text__c</fullName>
    <inlineHelpText>Additional text from applicant</inlineHelpText>
    <label>Additional Grant Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>