force-app/main/default/objects/FFC_Participation__c/fields/Anticipated_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Outcomes__c</fullName>
    <label>Anticipated Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>