force-app/main/default/objects/FFC_Participation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Url</type>
</CustomField>