force-app/main/default/objects/FFC_Participation__c/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <inlineHelpText>Financial Award, can be Funds For Change grant, event scholarship, or other financial support given.</inlineHelpText>
    <label>Award Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>