force-app/main/default/objects/FFC_Participation__c/fields/City_HQ__c.field-meta.xml
<CustomField>
    <fullName>City_HQ__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <label>City HQ</label>
    <type>Text</type>
</CustomField>