force-app/main/default/objects/FFC_Participation__c/fields/Final_Report__c.field-meta.xml
<CustomField>
    <fullName>Final_Report__c</fullName>
    <inlineHelpText>Link to the final report includes some photos. Others are in dropbox or attached to this Salesforce record</inlineHelpText>
    <label>Final Report</label>
    <type>Url</type>
</CustomField>