force-app/main/default/objects/FFC_Participation__c/fields/Final_Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Due_Date__c</fullName>
    <label>Final Report Due Date</label>
    <type>Date</type>
</CustomField>