force-app/main/default/objects/FFC_Participation__c/fields/Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned__c</fullName>
    <label>Lessons Learned</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>