force-app/main/default/objects/FFC_Participation__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <formula>Account__r.Member_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member ID</label>
    <type>Text</type>
</CustomField>