force-app/main/default/objects/FFC_Participation__c/fields/Mid_cycle_Notes_from_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Mid_cycle_Notes_from_Recipient__c</fullName>
    <label>Mid-cycle Notes from Recipient</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>