force-app/main/default/objects/FFC_Participation__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Offering</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only create a FFC Participation record for a FFC Program Offering.</errorMessage>
        <filterItems>
            <field>Program_Offering__c.Name</field>
            <operation>contains</operation>
            <value>FFC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipName>Program_Participation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>