force-app/main/default/objects/FFC_Participation__c/fields/Project_Goals__c.field-meta.xml
<CustomField>
    <fullName>Project_Goals__c</fullName>
    <label>Project Goals</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>