force-app/main/default/objects/FFC_Participation__c/fields/Project_Steps_or_Plan__c.field-meta.xml
<CustomField>
    <fullName>Project_Steps_or_Plan__c</fullName>
    <label>Project Steps or Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>