force-app/main/default/objects/FFC_Participation__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacity building</fullName>
            </value>
            <value>
                <fullName>Supply Drive program</fullName>
            </value>
            <value>
                <fullName>Fundraising/event plan</fullName>
            </value>
            <value>
                <fullName>Marketing-PR/website</fullName>
            </value>
            <value>
                <fullName>Program development</fullName>
            </value>
            <value>
                <fullName>Staff/board development</fullName>
            </value>
            <value>
                <fullName>Warehouse/expansion</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Geographic barriers</fullName>
            </value>
            <value>
                <fullName>Demonstration Grant</fullName>
            </value>
            <value>
                <fullName>Advocacy development</fullName>
            </value>
            <value>
                <fullName>Emergency/Disaster</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>