force-app/main/default/objects/FFC_Participation__c/fields/Staff_notes_and_comments__c.field-meta.xml
<CustomField>
    <fullName>Staff_notes_and_comments__c</fullName>
    <inlineHelpText>Next steps, any notes and comments can go here.</inlineHelpText>
    <label>Staff use and comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>