force-app/main/default/objects/FFC_Participation__c/fields/Status_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Project__c</fullName>
    <label>Status of Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>On-track at Mid-Year</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Noncompliant</fullName>
            </value>
            <value>
                <fullName>Did not fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>