force-app/main/default/objects/FFC_Participation__c/listViews/Advocacy_Development.listView-meta.xml
<ListView>
    <fullName>Advocacy_Development</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>City_HQ__c</columns>
    <columns>State__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Program_Offering__c</columns>
    <columns>Final_Report_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <filters>
        <field>Status_of_Project__c</field>
        <operation>notEqual</operation>
        <value>Applied</value>
    </filters>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>Advocacy development</value>
    </filters>
    <label>Advocacy Development</label>
</ListView>