force-app/main/default/objects/FFC_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Final_Report_Due_Date__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>State__c</columns>
    <columns>City_HQ__c</columns>
    <columns>Program_Offering__c</columns>
    <columns>Member_ID__c</columns>
    <columns>Staff_notes_and_comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <label>All 2024 Applied and Awarded</label>
</ListView>