force-app/main/default/objects/FFC_Participation__c/listViews/X2018_Funds_For_Change_Grants.listView-meta.xml
<ListView>
    <fullName>X2018_Funds_For_Change_Grants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>City_HQ__c</columns>
    <columns>State__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Program_Offering__c</columns>
    <columns>Final_Report_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2018</value>
    </filters>
    <filters>
        <field>Status_of_Project__c</field>
        <operation>notContain</operation>
        <value>Applied</value>
    </filters>
    <label>2018 Funds For Change Grants</label>
</ListView>