force-app/main/default/objects/FFC_Participation__c/listViews/X2020_Funds_for_Change_APS.listView-meta.xml
<ListView>
    <fullName>X2020_Funds_for_Change_APS</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>City_HQ__c</columns>
    <columns>State__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Final_Report_Due_Date__c</columns>
    <columns>Program_Offering__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>Status_of_Project__c</field>
        <operation>notEqual</operation>
        <value>Applied</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FFC-APS2020</value>
    </filters>
    <label>2020 Funds for Change APS</label>
</ListView>