force-app/main/default/objects/FFC_Participation__c/listViews/X2020_Funds_for_Change_Emergency_Relief.listView-meta.xml
<ListView>
    <fullName>X2020_Funds_for_Change_Emergency_Relief</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Account__c</columns>
    <columns>City_HQ__c</columns>
    <columns>State__c</columns>
    <columns>NAME</columns>
    <columns>Award_Amount__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Additional_Grant_Text__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>Staff_notes_and_comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FFC-COVID2020</value>
    </filters>
    <label>2020 Funds for Change Emergency Relief</label>
</ListView>