force-app/main/default/objects/FFC_Participation__c/listViews/X2020_Funds_for_Change_Recipients.listView-meta.xml
<ListView>
    <fullName>X2020_Funds_for_Change_Recipients</fullName>
    <columns>Account__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>Project_Type__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Final_Report_Due_Date__c</columns>
    <columns>Final_Report__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>Program_Offering__c</columns>
    <columns>City_HQ__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>Status_of_Project__c</field>
        <operation>equals</operation>
        <value>Started,On-track at Mid-Year,Completed,Extended,Did not fund</value>
    </filters>
    <label>2020 Funds for Change Grants</label>
</ListView>