force-app/main/default/objects/FFC_Participation__c/listViews/X2022_Funds_for_Change_Grants.listView-meta.xml
<ListView>
    <fullName>X2022_Funds_for_Change_Grants</fullName>
    <columns>Account__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>State__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Goals__c</columns>
    <columns>Final_Report__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status_of_Project__c</columns>
    <columns>Staff_notes_and_comments__c</columns>
    <columns>NAME</columns>
    <columns>City_HQ__c</columns>
    <columns>Member_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>54321</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>Status_of_Project__c</field>
        <operation>notEqual</operation>
        <value>Did not fund</value>
    </filters>
    <label>2022 Funds for Change Grants</label>
</ListView>